@@ -1,3 +1,8 @@
+Changes in RWinEdt_2.0-2:
+-------------------------
+Compatibility with WinEdt 8
+
+
 Changes in RWinEdt_2.0-0:
 -------------------------
 We are WinEdt 6 ready now!
